# norming

./: Makefile  README.rst  pyproject.toml
docs/: CNAME  index.html  v1.0.rst
src/norming/: __init__.py
src/norming/core/: Norming.py  __init__.py
src/norming/tests/: __init__.py  test_tuple_0.py  test_tuple_qual.py
