[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=77.0",
]

[project]
authors = [
    { email = "johannes.programming@gmail.com", name = "Johannes" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]
dependencies = [
    "setdoc>=1.3.14,<2",
]
description = "This project allows for creating norming classes."
keywords = []
license = "MIT"
license-files = [
    "LICENSE.txt",
]
name = "norming"
readme = "README.rst"
requires-python = ">=3.11"
version = "1.0.4"

[project.urls]
Download = "https://pypi.org/project/norming/#files"
Index = "https://pypi.org/project/norming/"
Source = "https://github.com/johannes-programming/norming/"
Website = "https://norming.johannes-programming.online/"

[tool.mypy]
